Added Title and Author

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://pwntoken.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Pwntoken - Digital Security Research
+subtitle: Information Security Sciences.
+author: Shritam Bhowmick
 simple_search: https://www.google.com/search
 description:
 
