--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Pwntoken - Digital Security Research
 subtitle: Information Security Sciences.
 author: Shritam Bhowmick
 simple_search: https://www.google.com/search
-description:
+description: A digital security research portal by the hackers and for the hackers. -Shritam Bhowmick
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -27,7 +27,7 @@ email:
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /blog/:year/:month/:day/:title/
+permalink: /:year/:month/:title/
 source: source
 destination: public
 plugins: plugins
@@ -44,7 +44,7 @@ highlighter: pygments # default python pygments have been replaced by pygments.r
 paginate: 10          # Posts per page on the blog index
 paginate_path: "posts/:num"  # Directory base for pagination URLs eg. /posts/2/
 recent_posts: 5       # Posts in the sidebar Recent Posts section
-excerpt_link: "Read more &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
+excerpt_link: "Continue Reading &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 excerpt_separator: "<!--more-->"
 
 titlecase: true       # Converts page and post titles to titlecase
