--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ email:
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /:year/:month/:title/
+permalink: /:title/
 source: source
 destination: public
 plugins: plugins
@@ -95,8 +95,8 @@ disqus_short_name: pwntoken
 disqus_show_comment_count: true
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-60671877-1
 
 # Facebook Like
-facebook_user: coded32
+facebook_user: hardcoresec
 facebook_like: true
