major changes - header complete change

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://pwntoken.github.io
 title: Pwntoken - Digital Security Research
-subtitle: Information Security Sciences.
+subtitle: Information Security Sciences with Shritam Bhowmick.
 author: Shritam Bhowmick
 simple_search: https://www.google.com/search
 description: A digital security research portal by the hackers and for the hackers. -Shritam Bhowmick
